paperless/22-service-postgres.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: paperless
spec:
  clusterIP: None
  selector:
    app: postgres
  ports:
    - port: 5432
      targetPort: 5432
